# Wavvon-docs

./: .gitignore  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  bot-media.md  bot-mini-apps.md  code-audit-2026-06-11.md  openapi.yaml  pilot-feedback-2026-06-12.md
.github/workflows/: android.yml  build.yml  release.yml
client/voxply-android/: .gitignore  SIGNING.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/voxply-android/src/: App.tsx  styles-mobile.css  styles.css
client/voxply-desktop/src/: App.tsx  constants.ts  styles.css  types.ts
client/voxply-desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
client/voxply-desktop/src-tauri/capabilities/: default.json
client/voxply-desktop/src-tauri/src/: auth_creds.rs  lib.rs
docs/: README.md  accessibility.md  alliances.md  android-client.md  android-rewrite-notes.md  architecture.md  banner-channels.md  block-mute-ignore.md  bot-capability-layer.md  bot-media.md  bot-mini-apps.md  bots.md  brand.md  browser-client.md  client-monorepo.md  client-parity.md  client-qol.md  client.md  code-signing.md  custom-themes.md  data-export.md  data-model.md  decisions-archive.md  decisions.md  discord-import.md  discovery-v2.md  e2e-encryption.md  events.md  farm-impl.md  farm-model.md  farm-server-architecture.md  federation.md  forum.md  future-features.md  gaming.md  getting-started.md  glossary.md  home-hub.md  hosting.md  hub-admin-panel.md  (+41 more)
scripts/: check-openapi-coverage.mjs
shared/voxply-identity/: Cargo.toml
(+36 files in other folders)
